started seeding museums, fixed home page nav clipping with vanilla tilt object

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,41 +1,44 @@
 body {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    color: rgba(34, 34, 34, 0.75);
-    min-height: 100vh;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  color: rgba(34, 34, 34, 0.75);
+  padding-top: 70px;
 }
 
 footer {
   bottom: 0;
   width: 100%;
-  margin-top: 20px;}
-
-#navLogo{
-    font-weight: 800;
-    font-weight: 800;
-    color: rgba(34, 34, 34, 0.75);
-    transition: transform 0.2s, text-shadow 0.2s;
-    display: inline-block
+  margin-top: 20px;
 }
 
-#navLogo:hover{
-    text-shadow: 0 1px 5px #aaa;
+nav {
+  z-index: 100;
+}
+
+#navLogo {
+  font-weight: 800;
+  font-weight: 800;
+  color: rgba(34, 34, 34, 0.75);
+  transition: transform 0.2s, text-shadow 0.2s;
+  display: inline-block;
+}
+
+#navLogo:hover {
+  text-shadow: 0 1px 5px #aaa;
   transform: translate(0, -0.1rem);
   color: rgba(34, 34, 34, 0.75);
 }
-
 
 .nav-link {
-    padding: 0.25rem 0;
-    color: #aaa;
-    margin-left: 1rem;
-    border-bottom: 0.125rem solid transparent;
-    transition: transform 0.2s, text-shadow 0.2s;
-  }
-  
-  .nav-link:hover {
-    text-shadow: 0 1px 5px #aaa;
+  padding: 0.25rem 0;
+  color: #aaa;
+  margin-left: 1rem;
+  border-bottom: 0.125rem solid transparent;
+  transition: transform 0.2s, text-shadow 0.2s;
+}
+
+.nav-link:hover {
+  text-shadow: 0 1px 5px #aaa;
   transform: translate(0, -0.1rem);
   color: rgba(34, 34, 34, 0.75);
-  }
-  
+}
